syntax = "proto3";
package formulas;
option java_package = "com.booleworks.logicng.serialization";
option java_outer_classname = "ProtoBufFormulas";

enum PbComparison {
  EQ = 0;
  GT = 1;
  GE = 2;
  LT = 3;
  LE = 4;
}

enum PbFormulaType {
  CONST = 0;
  LITERAL = 1;
  NOT = 2;
  AND = 3;
  OR = 4;
  IMPL = 5;
  EQUIV = 6;
  PBC = 7;
  PREDICATE = 8;
}

message PbFormulas {
  repeated int32 id = 1;
  PbFormulaMapping mapping = 2;
}

message PbFormulaMapping {
  map<int32, PbInternalFormula> mapping = 1;
}

message PbInternalFormula {
  optional PbFormulaType type = 1;
  optional bool value = 2; // constants
  optional string variable = 3; // literal (together with value)
  optional PbInternalPseudoBooleanConstraint pbConstraint = 4; // PBConstraint
  repeated int32 operand = 5; // not = 1, impl/equiv = 2, and/or = n
}

message PbInternalPseudoBooleanConstraint {
  PbComparison comparator = 1;
  int64 rhs = 2;
  repeated int64 coefficient = 3;
  repeated string literal = 4; // including phase with/out `-`
}
